--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.16/dist/lenis.css">
     <link rel="icon" type="image/svg+xml" href="/Camera.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aanchal Jain</title>
+    <title>Aditya goyal</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/lenis@1.1.16/dist/lenis.min.js"></script> 
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
